--- a/index.html
+++ b/index.html
@@ -2,29 +2,54 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body class="container">
-<h3 class="page-header">School</h3>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header" style="padding-left: 10px">
+            <div class="navbar-text navbar-brand-centered">
+                <div class="col-md-2 col-md-offset-5">
+                    <h3>SCHOOL</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
 <span id="course"></span>
-<section id="items" class="well"></section>
+<section id="items" class="well">
 
-<h1>Student with highest grade in <select id="optionsCourses"><option>Choose a course</option></select> is: </h1>
-<h2 id="studentGrade"></h2>
-<button onclick="gradeService.getStudentWithHighestGrade(getSelectedCourse())">Find out</button>
+    <h1>Student with highest grade in <select id="optionsCourses">
+        <option>Choose a course</option>
+    </select> is:
+    </h1>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-5">
+            <button class="btn btn-primary" onclick="gradeService.getStudentWithHighestGrade(getSelectedCourse())">Find
+                out
+            </button>
+            <h2 id="studentGrade"></h2></div>
+    </div>
 
 
-
-<h1> Teacher! Show me your students <select id="optionsTeachers"><option>Choose a teacher</option></select> </h1>
-<h2 id="students"></h2>
-<button onclick="getStudentsOfTeacher(getSelectedTeacher())">Find out</button>
+    <h1> Teacher! Show me your students <select id="optionsTeachers">
+        <option>Choose a teacher</option>
+    </select></h1>
+    <div class="row">
+        <div class="col-md-2 col-md-offset-5">
+            <button class="btn btn-primary" onclick="getStudentsOfTeacher(getSelectedTeacher())">Find out</button>
+            <h2 id="students"></h2></div>
+    </div>
+</section>
 
 <!-- Script tags -->
 <script src="js/person.js"></script>
 <script src="js/teacher.js"></script>
 <script src="js/course.js"></script>
-<script src="js/personalCourse.js"></script>
 <script src="js/student.js"></script>
+<script src="js/grade.js"></script>
 <script src="js/entityService.js"></script>
 <script src="js/courseService.js"></script>
 <script src="js/studentService.js"></script>
